# flytracker_analysis

./: 2p-tethered-courtship-plots-retinotopy.ipynb  2p-tethered-courtship-plots.ipynb  2p_plot_matlab.py  2p_plot_matlab_volumetric.py  2p_tuning_curves.py  DLC-diffspeeds2-parse-epochs-AGGR.ipynb  SeabornFig2Grid.py  aggregate_transformed_data.py  batch_deeplabcut.py  batch_deeplabcut_38mm.py  bout-metrics.ipynb  class_reconstruct.py  clip_movies.py  compare-natural-projector.py  concatenate_videos.py  convert_frames_to_video.py  copulation_curves.py  count_switches.py  create_gif.py  diffspeeds2.ipynb  dlc.py  dlc_to_flytracker.py  environment.yml  ethograms-to-pca.ipynb  extract_ROIs_v2_jyr.m  flytracker_matlab_ethograms.ipynb  frames_to_movie.ipynb  interceptions.py  interceptions_tmp.py  load-event-data.ipynb  load_data.py  load_matlab_projector_data.py  maDLCv2-test.ipynb  motionCorre_2Pim_jyr.m  multichamber.py  multichamber_strains.py  natalia-test.ipynb  parallel_pursuit.py  parallel_pursuit_dlc.py  parse_flytracker_results.ipynb  (+38 more)
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  Untitled2-checkpoint.ipynb  Untitled3-checkpoint.ipynb  center-to-male-checkpoint.ipynb  dlc-wing-extensions-checkpoint.ipynb  ethograms-to-pca-checkpoint.ipynb  load-jaaba-scores-checkpoint.ipynb  maDLCv2-test-checkpoint.ipynb  prepareForJAABA_MF_formodelv2_RL-checkpoint.ipynb  stereotyped-data-FH-checkpoint.ipynb  tracking-fft-amplitude-checkpoint.ipynb  visual-params-checkpoint.ipynb
data_io/: load_ft_data.py  load_matlab_projector_data.py  transfer_to_dropbox.py
libs/: dlc.py  (+5 more)
(+77 files in other folders)
